--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,8 @@
 /* Main navbar */
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: transparent;
   transition: all 0.3s ease;
-  height: 70px;
+  // height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -12,7 +11,8 @@
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 50px;
+  height: 60px;
+  margin-top: 10px;
 }
 
 /* User Avatar */
@@ -37,11 +37,11 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
+  color: $green;
+  font-size: 16px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+ color: $white;
   text-decoration: none;
 }
 
@@ -74,4 +74,28 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+.opaque-navbar {
+    min-height: 70px;
+    border-bottom: 0px;
+    transition: background-color .5s ease 0s;
+}
+.opaque-navbar.opaque {
+    background-color: black;
+    height: 60px;
+    transition: background-color .5s ease 0s;
+}
+ul.dropdown-menu {
+    background-color: black;
+}
+
+
+@media (max-width: 992px) {
+  .opaque-navbar {
+    background-color: black;
+    height: 60px;
+    transition: background-color .5s ease 0s;
+}
+
 }
