--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,20 @@
 // Define variables for your color scheme
 
 // For example:
+$white: rgb(255,255,255);
 $red: #EE5F5B;
 $blue: #469AE0;
-$yellow: #FDB631;
+$yellow: #F7CD63;
+$light-yellow: #F9DD70;
+$dark-yellow: #F7C263;
 $orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$green: #4cb289;
+$light-green: #B5DEAD;
+$dark-green: #4E5A49;
+$gray: #9C9C9C;
+$light-gray: #f4f4f4;
+$dark-gray: #323237;
+$black: rgb(0,0,0);
+$light-blue-gray: #B3BEC5;
+$charcoal-gray: #a5a4a4;
+$white-green: #F4FFFB;
