home-page style and js

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon navbar-inverse navbar-fixed-top opaque-navbar">
+<div class="navbar-wagon navbar-inverse navbar-fixed-top ">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "unitix-navbar-logo.png", height: 70 %>
@@ -68,7 +68,7 @@
 </div>
 
 
-<script>
+<!-- <script>
 
   const trigger = document.getElementById("menu-trigger");
   const menu = document.getElementById("menu-drop-down");
@@ -94,8 +94,8 @@
 
   });
 
-</script>
-
+</script> -->
+<!--
 <script>
 
   $(window).scroll(function() {
@@ -107,6 +107,6 @@
     }
 });
 
-</script>
+</script> -->
 
 
