--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,18 +1,29 @@
 /* Main navbar */
 .navbar-wagon {
   background: transparent;
-  transition: all 0.3s ease;
-  // height: 70px;
+  min-height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: 1s background-color ease;
+}
+.navbar-wagon-black{
+  background: #262626;
+  // box-shadow: 10px 15px 40px 0 rgba(0,0,0,.05);
 }
 
 /* Logo */
+
+@media (max-width: 767px) {
+  .navbar-wagon-brand img {
+    height: 30px;
+    margin: 10px 10px 10px 0;
+  }
+}
 .navbar-wagon-brand img {
-  height: 60px;
-  margin-top: 10px;
+  height: 50px;
+  margin: 10px 10px 10px 0;
 }
 
 /* User Avatar */
@@ -38,11 +49,15 @@
 /* Navbar link */
 .navbar-wagon-link {
   color: $green;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: bold;
+  text-shadow: #000 0px 0px 0.01px;
+  -webkit-font-smoothing: antialiased;
 }
 .navbar-wagon-link:hover {
  color: $white;
-  text-decoration: none;
+ opacity: 0.7;
+ text-decoration: none;
 }
 
 /* Dropdown menu */
@@ -77,17 +92,17 @@
 }
 
 .opaque-navbar {
-    min-height: 70px;
-    border-bottom: 0px;
-    transition: background-color .5s ease 0s;
+  min-height: 70px;
+  border-bottom: 0px;
+  transition: background-color .5s ease 0s;
 }
 .opaque-navbar.opaque {
-    background-color: black;
-    height: 60px;
-    transition: background-color .5s ease 0s;
+  background-color: black;
+  height: 60px;
+  transition: background-color .5s ease 0s;
 }
 ul.dropdown-menu {
-    background-color: black;
+  background-color: black;
 }
 
 
@@ -96,6 +111,6 @@ ul.dropdown-menu {
     background-color: black;
     height: 60px;
     transition: background-color .5s ease 0s;
-}
+  }
 
 }
