--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,10 @@
 
   <div class="banner-content-container">
     <div class="banner-content">
-      <p>Explore for any occasion!</p>
+      <p>
+        <span id="banner-typed-text"></span>
+      </p>
+
 
       <div class="banner-search">
 
