--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,30 @@
-<h2>Sign up</h2>
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :first_name, required: true %>
-    <%= f.input :last_name, required: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+<div class="container">
+  <div class="sign-up-container">
+    <div class="sign-up-text-container">
+      <h2 class='sign-up-text'>Sign up</h2>
+    </div>
+    <div class="form-inputs">
+      <%= f.input :email, placeholder: '@uni.ac.uk', required: true, autofocus: true %>
+      <%= f.input :first_name, placeholder: 'Desmond', required: true %>
+      <%= f.input :last_name, placeholder: 'Tutu', required: true %>
+      <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, required: true, class: 'password_confirmation-color' %>
+    </div>
+
+
+
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up" %>
+    </div>
+    <% end %>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="log-in-button">
+  <%= render "devise/shared/links" %>
+</div>
