--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Find out more", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
 
       <!-- Avatar with dropdown menu -->
