--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
