--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 /* Main navbar */
 .navbar-wagon {
-  background: transparent;
+  // background: transparent;
+  background: #262626;
   min-height: 70px;
   padding: 0px 30px;
   display: flex;
