--- a/app/views/pages/_dashboard_nav.html.erb
+++ b/app/views/pages/_dashboard_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon navbar-inverse navbar-fixed-top ">
+<div class="navbar-wagon-fixed navbar-inverse navbar-fixed-top ">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "unitix-navbar-logo.png", height: 70 %>
@@ -70,6 +70,3 @@
     </div>
   </div>
 </div>
-
-
-
