--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,7 +13,8 @@
     width: 500px;
   }
   #query {
-    width: 100%;
+    width: 90%;
+    margin: auto;
   }
 }
 .banner h1 {
@@ -32,6 +33,9 @@
   display: flex;
   justify-content: center;
   align-content: center;
+}
+.banner-search{
+  display: relative;
 }
 #search-description {
   opacity: 0.7;
@@ -56,14 +60,6 @@
       opacity: 0.8;
     }
 }
-
-// #search-btn {
-//   margin-bottom: 200px;
-//   &:hover {
-//     background: $green;
-//     box-shadow: 0 0 5px #a5a4a4;
-//   }
-// }
 .banner-typed-text{
   color:white;
 }
