--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -6,6 +6,10 @@
   top: 60px;
   border-bottom: solid 1px $light-gray;
   min-height: 80px;
+  z-index: 10;
+}
+.dashboard-tab-text{
+  margin-top: 10px;
 }
 .dashboard-tabs a {
   color: white;
@@ -23,7 +27,7 @@
   margin-top: 0;
 }
 .dashboard-tabs p {
-  opacity: 0.5;
+  opacity: 0.7;
   margin-bottom: 0;
 }
 .dashboardtab {
@@ -39,6 +43,6 @@
   border-radius: 0 10px 0 0;
 }
 .dashboardtab.active {
-  background: white;
+  background: whitesmoke;
   color: black;
 }
