--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -1,4 +1,3 @@
-
 .dashboard-primary-section{
  display: block;
  margin: 0 auto;
@@ -87,43 +86,21 @@
   padding: 10px 0;
   border-top: 1px solid #E7EAEC;
 }
-.dashboard-date{
+.dashboard-left{
   display: table-cell;
   vertical-align: top;
 }
-.dashboard-date-outside-block{
+.dashboard-left-outside-block{
   min-width: 50px;
   display: block;
 }
-.dashboard-date-container{
+.dashboard-left-container{
   width: 75px;
   min-width: 75px;
   height: 65px;
   border-right: 0.5px solid #CFD4D9;
   display: table-cell;
   vertical-align: middle;
-}
-.date-dashboard-day{
-  width: 100%;
-  color: #535353;
-  font-weight: 600;
-  letter-spacing: 0.3px;
-  display: block;
-  text-align: center;
-  font-size: 18px;
-}
-.date-dashboard-month-date{
-  font-size: 12px;
-  width: 100%;
-  height: auto;
-  color: #87909A;
-  display: block;
-  font-weight: 700;
-  line-height: 14px;
-  letter-spacing: -0.1px;
-  margin-top: 2px;
-  text-align: center;
-  text-transform: uppercase;
 }
 .dashboard-description{
   padding: 0 20px;
@@ -180,7 +157,7 @@
   display: table-cell;
   border-left: 0.5px solid #CFD4D9;
 }
-.dashboard-price .cop-it{
+.dashboard-price .price-at{
   color: #535353;
   font-size: 12px;
   text-align: right;
@@ -197,7 +174,8 @@
   font-weight: bolder;
 }
 .posted-on-text{
-  font-size: 12px;
+  font-size: 14px;
+  padding-left: 5px;
 }
 .booking-ticket-date{
   font-size:14px;
@@ -208,4 +186,7 @@
   padding-top: 10px;
   padding-left: 18px;
   color: darkslategray;
+  &:hover{
+    color: $green;
+  }
 }
