--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,15 @@
   background: #262626;
   // box-shadow: 10px 15px 40px 0 rgba(0,0,0,.05);
 }
+.navbar-wagon-fixed{
+  background: #262626;
+  min-height: 70px;
+  padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 1s background-color ease;
+}
 
 /* Logo */
 
@@ -32,6 +41,11 @@
   height: 35px;
   width: 35px;
   border-radius: 50%;
+}
+.navbar-wagon-fixed .avatar{
+ height: 35px;
+ width: 35px;
+ border-radius: 50%;
 }
 
 /* Right section */
@@ -90,20 +104,6 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
-}
-
-.opaque-navbar {
-  min-height: 70px;
-  border-bottom: 0px;
-  transition: background-color .5s ease 0s;
-}
-.opaque-navbar.opaque {
-  background-color: black;
-  height: 60px;
-  transition: background-color .5s ease 0s;
-}
-ul.dropdown-menu {
-  background-color: black;
 }
 
 
