--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -53,7 +53,7 @@
           <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <li>
-          <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <% if user_signed_in? %>
         <li>
