--- a/app/views/pages/_dashboard_nav.html.erb
+++ b/app/views/pages/_dashboard_nav.html.erb
@@ -38,7 +38,7 @@
     <% else %>
       <!-- Login link (when logged out) -->
       <%= link_to "Find out more", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "List a Ticket", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
@@ -53,7 +53,7 @@
           <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <li>
-          <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <% if user_signed_in? %>
         <li>
