--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,6 +26,9 @@
             <%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
           </li>
           <li>
+            <%= link_to "Profile", profile_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          </li>
+          <li>
             <%= link_to destroy_user_session_path, method: :delete do %>
               <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
             <% end %>
@@ -37,8 +40,8 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Find out more", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "List a Ticket", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
@@ -50,12 +53,15 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="mobile-drop-down">
         <li>
-          <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
-        </li>
-        <li>
           <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <% if user_signed_in? %>
+         <li>
+          <%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        </li>
+        <li>
+            <%= link_to "Profile", profile_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          </li>
         <li>
           <%= link_to destroy_user_session_path, method: :delete do %>
             <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
