--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,6 +60,12 @@
   cursor: pointer;
   padding: 0 20px;
 }
+.navbar-wagon-item:nth-child(2){
+  background: $green;
+  color: #262626;
+  padding: 0px 10px;
+  border-radius: 20px;
+}
 
 /* Navbar link */
 .navbar-wagon-link {
