lots of styling and maps

--- a/app/views/events/_list_form.html.erb
+++ b/app/views/events/_list_form.html.erb
@@ -16,7 +16,7 @@
     <div class="form-100">
       <div class="location-pin">
       </div>
-      <%= e.input :location, placeholder: 'seshlehem', label: 'Where' %>
+      <%= e.input :address, placeholder: 'seshlehem', label: 'Where' %>
     </div>
 
     <div class="form-100">
