--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -63,3 +63,26 @@
 .banner-typed-text{
   color:white;
 }
+
+// Ticket Banner //
+
+.ticket-banner-container {
+  color: white;
+  text-align: center;
+  height: 40vh;
+  background-size: cover !important;
+  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%);
+  .banner-content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .banner-content {
+    width: 500px;
+  }
+}
+.banner-venue{
+  padding-top:80px;
+  text-align: center;
+}
