--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -1,13 +1,33 @@
-.dashboard-primary-section{
+.main-show-container{
+  position: relative;
+  top: 100px;
+}
+.container-body{
+
+}
+.ticket-primary-section{
  display: block;
  margin: 0 auto;
  width: 100%;
  padding-top: 20px;
 }
-.dashboard-main-section{
+.ticket-main-section{
   max-width: 1000px;
   margin: auto;
   padding: 0 20px 0 20px;
+}
+@media (min-width: 1024px){
+  .show-ticket-container{
+    padding: 0 0 0 20px;
+    width: 100%;
+    display: flex;
+  }
+}
+@media (max-width: 1023px){
+  .show-ticket-container{
+    padding: 0 0 0 0px;
+    width: 100%;
+  }
 }
 .container-header-section{
   padding: 20px 10px;
@@ -46,7 +66,7 @@
   color: #585858;
   text-align: left;
 }
-.dashboard-containers {
+.ticket-container {
   position: relative;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -55,17 +75,15 @@
   display: flex;
   align-items: center;
 }
-.container-upcoming-dashboards{
-  margin-bottom: 20px;
+.container-upcoming-tickets{
   border: 0.5px solid #E7EAEC;
   background-color: #fffffe;
   position: relative;
   display: block;
-  border-radius: 10px;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-}
-.margin-top-80{
-  margin-top: 80px;
+  border-radius: 80px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  align-self: flex-start;
+  margin: 20px;
 }
 .container-header-section{
   padding: 20px 10px;
@@ -75,50 +93,50 @@
   display: block;
 }
 @media (max-width: 767px) {
-  .dashboard-group-unique{
+  .ticket-unique{
     position: relative;
-    padding: 25px 0;
-    border-top: 1px solid #E7EAEC;
+    padding: 0;
+    // border-top: 1px solid #E7EAEC;
   }
 }
-.dashboard-group-unique{
+.ticket-unique{
   position: relative;
-  border-top: 1px solid #E7EAEC;
+  // padding: 10px 0;
+  // border-top: 1px solid #E7EAEC;
 }
-.dashboard-left{
+.ticket-left{
   display: table-cell;
   vertical-align: top;
 }
-.dashboard-left-outside-block{
-  min-width: 50px;
-  display: block;
-}
-.dashboard-left-container{
-  width: 75px;
-  min-width: 75px;
-  height: 65px;
-  border-right: 0.5px solid #CFD4D9;
+
+.ticket-left-container{
+  width: 80px;
+  min-width: 80px;
+  // border-right: 0.5px solid #CFD4D9;
   display: table-cell;
   vertical-align: middle;
+  text-align: center;
+
+  padding-top: 30px;
 }
-.dashboard-description{
+.ticket-description{
   padding: 0 20px;
   vertical-align: top;
   width: 100%;
   display: table-cell;
   /*  border-right: 0.5px solid #CFD4D9;*/
 }
-.dashboard-description-container{
+.ticket-description-container{
   vertical-align: top;
 }
-.dashboard-link-to-show-page{
+.ticket-link-to-show-page{
   color: #4cb289;
   font-size: 16px;
   text-decoration: none;
   cursor: pointer;
   font-weight: bolder;
 }
-.dashboard-details{
+.ticket-details{
   margin-top: 12px;
   font-size: 12px;
   color: #828282;
@@ -126,66 +144,57 @@
   max-height: 45px;
   line-height: 15px;
 }
-.dashboard-watch{
-  padding: 20px;
-  vertical-align: top;
-  width: 100%;
-  display: table-cell;
-  border-right: 0.5px solid #CFD4D9;
+@media (min-width: 768px) {
+  .ticket-price{
+    min-width: 80px;
+    height: 80px;
+    width: 80px;
+    border-radius: 80px;
+    padding-right: 10px;
+    vertical-align: top;
+    font-size: 12px;
+    text-align: center;
+    display: table-cell;
+    border: 0.5px solid #E7EAEC;
+    padding-top: 15px;
+  }
 }
-.fa-heart{
-  color: palevioletred;
-  cursor: pointer;
+@media (max-width: 767px) {
+  .ticket-price{
+    min-width: 80px;
+    height: 80px;
+    width: 80px;
+    border-radius: 80px;
+    vertical-align: top;
+    font-size: 12px;
+    text-align: center;
+    display: table-cell;
+    border: 0.5px solid #E7EAEC;
+    padding-top: 15px;
+    /* padding-left: 10px; */
+    padding-right: 10px;
+  }
 }
-.fa-heart:hover{
-  color: orangered;
-  transition: all .15s ease-in-out;
-  -ms-transform: scale(1.40);
-  -webkit-transform: scale(1.40);
-  transform: scale(1.40);
-}
-.fa-heart:visited{
-  color: orangered;
-}
-.dashboard-price{
-  min-width: 80px;
-  padding-right: 10px;
-  vertical-align: top;
-  font-size: 12px;
-  text-align: right;
-  display: table-cell;
-  border-left: 0.5px solid #CFD4D9;
-}
-.dashboard-price .price-at{
+.ticket-price .cop-it{
   color: #535353;
   font-size: 12px;
   text-align: right;
 }
-.dashboard-price .price{
+.ticket-price .price{
   font-size: 20px;
-  color: #65B891;
-  margin: 0;
+  color: $red;
 }
-.dashboard-price .dashboards-left{
+.ticket-price .tickets-left{
   font-size: 12px;
   color: #D26478;
   letter-spacing: 0.4px;
   font-weight: bolder;
 }
-.posted-on-text{
-  font-size: 14px;
-  padding-left: 5px;
-}
-.booking-ticket-date{
-  font-size:14px;
-  color: $dark-gray;
-  padding-bottom: 5px;
-}
-.fa-file{
-  padding-top: 10px;
-  padding-left: 18px;
-  color: darkslategray;
+.fa-shopping-cart{
+  padding: 3px;
+  color: lightslategrey;
+  opacity: 0.5;
   &:hover{
-    color: $green;
+    color: darkslategray;
   }
 }
