--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,24 @@
+<% if current_user[:photo] == nil  %>
+  <h1>*********************</h1>
+  <h1> Please upload a profile photo</h1>
+  <%= render 'edit_form' %>
+<% else %>
+  <% if @event.errors.any? %>
+    <ul>
+      <% @event.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <% if @ticket.errors.any? %>
+    <ul>
+      <% @ticket.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
 <div class="container" style=" padding-top: 30px">
   <%= render 'list_form', event: @event, ticket: @ticket %>
 </div>
-
+<% end %>
 
