--- a/app/views/pages/_dashboard_nav.html.erb
+++ b/app/views/pages/_dashboard_nav.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
@@ -20,7 +20,7 @@
       <div class="navbar-wagon-item">
 
         <div class="dropdown" id="menu-trigger">
-          <%= image_tag "student_avatar.png", class: "avatar dropdown-toggle", "data-toggle" => "dropdown" %>
+          <%= cl_image_tag current_user.photo, class: "avatar dropdown-toggle", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="menu-drop-down">
           <li>
             <%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
@@ -53,7 +53,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="mobile-drop-down">
         <li>
-          <%= link_to "Explore", tickets_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <li>
           <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
