--- a/app/assets/stylesheets/components/_list_form.scss
+++ b/app/assets/stylesheets/components/_list_form.scss
@@ -1,55 +1,29 @@
-.aa-input-container {
-  display: inline-block;
-  position: relative; }
-.aa-input-search {
-  width: 300px;
-  border: 1px solid rgba(228, 228, 228, 0.6);
-  padding: 12px 28px 12px 12px;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none; }
-  .aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button, .aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
-    display: none; }
-.aa-input-icon {
-  height: 16px;
-  width: 16px;
-  position: absolute;
-  top: 50%;
-  right: 16px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  fill: #e4e4e4; }
 .aa-dropdown-menu {
-  background-color: #fff;
+  background-color: $white;
   border: 1px solid rgba(228, 228, 228, 0.6);
-  min-width: 300px;
-  margin-top: 10px;
-  box-sizing: border-box; }
+  min-width: 250px;
+}
 
 .aa-suggestion {
   padding: 12px;
   border-top: 1px solid rgba(228, 228, 228, 0.6);
   cursor: pointer;
-  -webkit-transition: .2s;
   transition: .2s;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
-  .aa-suggestion:hover, .aa-suggestion.aa-cursor {
-    background-color: rgba(241, 241, 241, 0.35); }
-  .aa-suggestion > span:first-child {
-    color: #333; }
-  .aa-suggestion > span:last-child {
-    color: #a9a9a9; }
+}
+
+.aa-suggestion:hover, .aa-suggestion.aa-cursor {
+  background-color: $dark-gray;
+  color: $white;
+}
+
 .aa-suggestion > span:first-child em, .aa-suggestion > span:last-child em {
   font-weight: 700;
   font-style: normal;
-  background-color: rgba(58, 150, 207, 0.1);
-  padding: 2px 0 2px 2px; }
+  color: $green;
+  padding: 2px 0 2px 2px;
+}
+
+.algolia-autocomplete {
+  display: block !important;
+}
