--- a/app/views/pages/_dashboard-purchases.html.erb
+++ b/app/views/pages/_dashboard-purchases.html.erb
@@ -45,7 +45,7 @@
               <div class="dashboard-description">
                 <div class="dashboard-description-container">
                   <div class="dashboard-link-to-show-page">
-                    <p><%= booking.ticket.event.name %> @ <%= booking.ticket.event.location %></p>
+                    <p><%= booking.ticket.event.name %> @ <%= booking.ticket.event.address %></p>
                   </div>
                   <div class="dashboard-details">
                     <p><%=booking.ticket.event.date_and_time.strftime('%a %d %b') %></p>
