--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,26 +1,3 @@
-<div class="container" style="color: black;">
-  <%= form_tag(new_event_path, method: 'get') do %>
-    <%= text_field_tag :search_event, params[:search_event], placeholder: "Check if your event exists...", class: "form-inline" %>
-    <%= submit_tag 'Add Ticket for this Event', search_event: nil %>
-  <% end %>
-
-  <div class="search-results">
-    <% if @events == nil %>
-    <h3></h3>
-      <% if @events.length == 0 %>
-        <h3>Tickets for this event have sold out!</h3>
-      <% end %>
-      <% @events.each do |event| %>
-        <li><%= event.name %></li>
-        <li><%= event.address %></li>
-        <li><%= event.category %></li>
-        <li><%= event.date_and_time %></li>
-        <li><%= event.quantity %> tickets are currently listed</li>
-      <% end %>
-    <% end %>
-  </div>
-</div>
-
 <% if current_user[:photo] == nil  %>
   <h1>*********************</h1>
   <h1> Please upload a profile photo</h1>
@@ -39,12 +16,37 @@
       <li><%= message %></li>
       <% end %>
     </ul>
+  <% end %>
+
+
+<div class="container" style="color: black;">
+  <%= form_tag(new_event_path, method: 'get') do %>
+    <%= text_field_tag :search_event, params[:search_event], placeholder: "Check if your event exists...", class: "form-inline" %>
+    <%= submit_tag 'Add Ticket for this Event', search_event: nil %>
+  <% end %>
+
+  <div class="search-results">
+    <% if @events != nil %>
+    <h3></h3>
+      <% if @events.length == 0 %>
+        <h3>Tickets for this event have sold out!</h3>
+      <% end %>
+      <% @events.each do |event| %>
+        <li><%= event.name %></li>
+        <li><%= event.address %></li>
+        <li><%= event.category %></li>
+        <li><%= event.date_and_time %></li>
+        <li><%= event.quantity %> tickets are currently listed</li>
+      <% end %>
     <% end %>
+  </div>
+</div>
+
 
 <div class="container" style=" padding-top: 30px">
   <%= render 'list_form', event: @event, ticket: @ticket %>
 </div>
-
+<% end %>
 <!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
 <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
