--- a/app/views/pages/_dashboard-listings.html.erb
+++ b/app/views/pages/_dashboard-listings.html.erb
@@ -45,7 +45,7 @@
               <div class="dashboard-description">
                 <div class="dashboard-description-container">
                   <div class="dashboard-link-to-show-page">
-                    <p><%= ticket.event.name %> @ <%= ticket.event.location %></p>
+                    <p><%= ticket.event.name %> @ <%= ticket.event.address %></p>
                   </div>
                   <div class="dashboard-details">
                     <p><%= ticket.description %></p>
