--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <div class="alert alert-info alert-dismissible" role="alert" style="margin-top: 70px !important">
+  <div class="alert alert-info alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <%= notice %>
   </div>
