--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -69,7 +69,6 @@
 .ticket-banner-container {
   color: white;
   text-align: center;
-  height: 40vh;
   background-size: cover !important;
   background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%);
   .banner-content-container {
@@ -83,6 +82,12 @@
   }
 }
 .banner-venue{
-  padding-top:80px;
+  padding-top:20px;
   text-align: center;
+  color: white;
+  opacity: 0.95;
+}
+.circle-avatar{
+  border-radius: 50%;
+  padding-bottom: 1px;
 }
