--- a/app/assets/stylesheets/layouts/_map.scss
+++ b/app/assets/stylesheets/layouts/_map.scss
@@ -1,4 +1,17 @@
-#map {
-  flex: 0 0 450px;
-  position: sticky !important;
+
+@media (min-width: 924px){
+  #map {
+    flex: 0 0 450px;
+    position: sticky !important;
+    width: 100%;
+    height: 100vh;
+  }
+}
+@media (max-width: 923px){
+  #map {
+    flex: 0 0 450px;
+    position: sticky !important;
+    width: 100%;
+    height: 350px;
+  }
 }
