--- a/app/views/pages/_dashboard-purchases.html.erb
+++ b/app/views/pages/_dashboard-purchases.html.erb
@@ -5,7 +5,7 @@
   <section class="dashboard-primary-section">
     <div class="dashboard-containers">
 
-      <div class="container-upcoming-dashboards margin-top-80" >
+      <div class="container-upcoming-dashboards" >
         <div class="container-header-section">
           <div class="container-header-text">
             <span class="results-query">
@@ -21,7 +21,7 @@
             <div class="dropdown-select-sort">
               <div class="dropdown-select-option-picked">
                 <div class="dropdown-select-option-picked-text">
-                  Date
+
                 </div>
               </div>
             </div>
