alerts and navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,26 +17,50 @@
 
 
       <!-- Avatar with dropdown menu -->
-      <div class="navbar-wagon-item">
+      <% if current_user[:photo] != nil  %>
+          <div class="navbar-wagon-item">
 
-        <div class="dropdown" id="menu-trigger">
-          <%= cl_image_tag current_user.photo, class: "avatar dropdown-toggle", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="menu-drop-down">
-          <li>
-            <%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
-          </li>
-          <li>
-            <%= link_to "Profile", profile_path, class: "navbar-wagon-item navbar-wagon-link" %>
-          </li>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>
-              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-            <% end %>
-          </li>
-        </ul>
-        </div>
+            <div class="dropdown" id="menu-trigger">
+              <%= cl_image_tag current_user.photo, class: "avatar dropdown-toggle", "data-toggle" => "dropdown" %>
+              <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="menu-drop-down">
+              <li>
+                <%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
+              </li>
+              <li>
+                <%= link_to "Profile", profile_path, class: "navbar-wagon-item navbar-wagon-link" %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                <% end %>
+              </li>
+            </ul>
+            </div>
 
-      </div>
+          </div>
+
+      <% else %>
+          <div class="navbar-wagon-item">
+
+            <div class="dropdown" id="menu-trigger">
+              <%= image_tag "student_avatar.png", class: "avatar dropdown-toggle", "data-toggle" => "dropdown" %>
+              <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="menu-drop-down">
+              <li>
+                <%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
+              </li>
+              <li>
+                <%= link_to "Profile", profile_path, class: "navbar-wagon-item navbar-wagon-link" %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                <% end %>
+              </li>
+            </ul>
+            </div>
+
+          </div>
+      <%end %>
 
     <% else %>
       <!-- Login link (when logged out) -->
