listing event and ticket done

--- a/app/assets/stylesheets/components/_list_form.scss
+++ b/app/assets/stylesheets/components/_list_form.scss
@@ -24,6 +24,9 @@
   padding: 2px 0 2px 2px;
 }
 
-.algolia-autocomplete {
-  display: block !important;
+.list-ticket-form {
+  display: flex;
+  padding: 10px 10px;
+  align-items: center;
 }
+
