--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <!-- Links when logged in -->
       <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
-      <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
 
