--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -94,15 +94,15 @@
   display: block;
 }
 .dashboard-left-container{
-  width: 75px;
-  min-width: 75px;
-  height: 65px;
+  width: 85px;
+  min-width: 85px;
+  height: 105px;
   border-right: 0.5px solid #CFD4D9;
   display: table-cell;
   vertical-align: middle;
 }
 .dashboard-description{
-  padding: 0 20px;
+  padding: 10px 20px;
   vertical-align: top;
   width: 100%;
   display: table-cell;
@@ -117,9 +117,9 @@
   text-decoration: none;
   cursor: pointer;
   font-weight: bolder;
+  margin-top: 2px;
 }
 .dashboard-details{
-  margin-top: 12px;
   font-size: 12px;
   color: #828282;
   overflow: hidden;
@@ -148,8 +148,8 @@
   color: orangered;
 }
 .dashboard-price{
-  min-width: 80px;
-  padding-right: 10px;
+  min-width: 85px;
+  padding: 20px 15px 0 0;
   vertical-align: top;
   font-size: 12px;
   text-align: right;
@@ -174,7 +174,7 @@
 }
 .posted-on-text{
   font-size: 14px;
-  padding-left: 5px;
+  padding-left: 8px;
 }
 .booking-ticket-date{
   font-size:14px;
