--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -25,7 +25,6 @@
 }
 @media (max-width: 923px){
   .show-ticket-container{
-    padding: 0 0 0 0px;
     width: 100%;
   }
 }
@@ -40,32 +39,6 @@
   display: block;
   margin-left: 10px;
 }
-.dropdown-select-sort-container{
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 120px;
-}
-.dropdown-select-sort{
-  position: relative;
-  width: 100%;
-  box-sizing: border-box;
-  background: inherit;
-}
-.dropdown-select-option-picked{
-  padding-bottom: 3px;
-  display: block;
-  margin-left: 20px;
-}
-.dropdown-select-option-picked-text{
-  padding: 19px;
-  font-family: HelveticaNeue, "Helvetica Neue";
-  font-weight: 700;
-  font-size: 14px;
-  color: #585858;
-  text-align: left;
-}
 .ticket-container {
   position: relative;
   -webkit-font-smoothing: antialiased;
@@ -76,7 +49,7 @@
   align-items: center;
 }
 .container-upcoming-tickets{
-  border: 0.5px solid #E7EAEC;
+  border: 0.5px dotted $green;
   background-color: whitesmoke;
   opacity: 0.85;
   position: relative;
@@ -84,7 +57,7 @@
   border-radius: 80px;
   box-shadow: 0 1px 1px rgba(0,0,0,0.1);
   align-self: flex-start;
-  margin: 20px 30px 30px 10px;
+  margin: 20px 10px 30px 5px;
 }
 .container-header-section{
   padding: 20px 10px;
@@ -153,7 +126,7 @@
   font-size: 12px;
   text-align: center;
   display: table-cell;
-  padding: 15px 15px 0 15px;
+  padding: 10px 15px 0 15px;
 }
 .ticket-price .cop-it{
   color: #535353;
@@ -182,5 +155,30 @@
   text-align: center;
   padding: 10px;
   color: lightgreen;
+}
+
+@media (min-width: 924px){
+  .container-no-upcoming-tickets{
+    background-color: whitesmoke;
+    opacity: 0.95;
+    position: relative;
+    display: block;
+    border-radius: 5px;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    margin: 80px;
+
+  }
+}
+@media (max-width: 923px){
+ .container-no-upcoming-tickets{
+  background-color: whitesmoke;
+  opacity: 0.95;
+  position: relative;
+  display: block;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  margin: 20px;
+}
+
 }
 
