--- a/app/views/pages/_dashboard_nav.html.erb
+++ b/app/views/pages/_dashboard_nav.html.erb
@@ -10,11 +10,9 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
-
+       <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "List a Ticket", new_event_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Find out more", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
-
+      <%= link_to "Help", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
