added geocoding location

--- a/app/views/events/_list_form.html.erb
+++ b/app/views/events/_list_form.html.erb
@@ -16,7 +16,7 @@
     <div class="form-100">
       <div class="location-pin">
       </div>
-      <%= e.input :address, placeholder: 'City', label: 'Where' %>
+      <%= e.input :address, placeholder: 'Location', label: 'Where', id: 'event_address' %>
     </div>
 
     <div class="form-100">
