--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -25,6 +25,9 @@
   <% end %>
 </div>
 
+ <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}" %>
+ <%= javascript_pack_tag "form" %>
+
 
 
 <!-- Include AlgoliaSearch JS Client and autocomplete.js library -->
